--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "defaultConnection" :"Server=localhost;port=3306;Database=ecommerceproductsdatabase;UserID=root;Password=card#1234",
+    "defaultConnection": "Server=mysql-host-productmicroservice;port=3307;Database=ecommerceproductsdatabase;UserID=root;Password=admin",
+    "defaultConnection2": "Server=localhost;port=3306;Database=ecommerceproductsdatabase;UserID=root;Password=card#1234"
 
 
   }
